download uploaded files; clone collections; rename posts to record sets; record details can contain limited html; urls in record details are turned into links; keywords are added to all individuals in a record
