# api/content.go
@@ -17,8 +17,8 @@ type ContentRequest struct {
 
 // ContentResult contains a URL to post the content
 type ContentResult struct {
-	PutURL string `json:"putURL"`
-	Key    string `json:"key"`
+	SignedURL string `json:"signedURL"`
+	Key       string `json:"key"`
 }
 
 // PostContentRequest returns a URL for posting content
@@ -37,9 +37,32 @@ func (api API) PostContentRequest(ctx context.Context, contentRequest ContentReq
 	key := fmt.Sprintf("%s/%s", now.Format("2006-01-02"), now.Format(time.RFC3339Nano))
 	fullKey := fmt.Sprintf("/%d/%s", societyID, key)
 	signedURL, err := bucket.SignedURL(ctx, fullKey, &blob.SignedURLOptions{
-		Expiry:      24 * time.Hour,
+		Expiry:      5 * time.Minute,
 		Method:      "PUT",
 		ContentType: contentRequest.ContentType,
+	})
+	if err != nil {
+		return nil, NewError(err)
+	}
+	return &ContentResult{signedURL, key}, nil
+}
+
+// GetContentRequest returns a URL for downloading content
+func (api API) GetContentRequest(ctx context.Context, key string) (*ContentResult, error) {
+	societyID, err := utils.GetSocietyIDFromContext(ctx)
+	if err != nil {
+		return nil, NewError(err)
+	}
+	bucket, err := api.OpenBucket(ctx, true)
+	if err != nil {
+		return nil, NewError(err)
+	}
+	defer bucket.Close()
+
+	fullKey := fmt.Sprintf("/%d/%s", societyID, key)
+	signedURL, err := bucket.SignedURL(ctx, fullKey, &blob.SignedURLOptions{
+		Expiry: 5 * time.Minute,
+		Method: "GET",
 	})
 	if err != nil {
 		return nil, NewError(err)
